<resources>
    <string name="app_name">RevvedUp</string>
    <string name="already_an_user_login">Deja un utilizator? Autentifică-te</string>
    <string name="register_btn">Înregistrare</string>
    <string name="confirm_password">Confirmare Parolă</string>
    <string name="password">Parolă</string>
    <string name="email">Adresa de Email</string>
    <string name="last_name">Nume</string>
    <string name="first_name">Prenume</string>
    <string name="register">Înregistrare</string>
    <string name="logo">RevvedUp</string>
    <string name="login">Autentificare</string>
    <string name="register_now">Nu ai cont? Înregistrează-te acum!</string>
    <string name="login_btn">Autentificare</string>
    <string name="home_page">PAGINA PRINCIPALĂ</string>
    <string name="username">Nume de utilizator</string>
    <string name="search">Cautare</string>
    <string name="add">Adăugare</string>
    <string name="choose_role">Alege tipul de utilizator</string>
    <string name="home">Acasă</string>
    <string name="events">Evenimente</string>
    <string name="users">Utilizatori</string>
    <string name="settings">Setări</string>
    <string name="salut">Salut!</string>
    <string name="select_photo">Selectează fotografia</string>
    <string name="save_changes">Salvează schimbările</string>
    <string name="back">Înapoi</string>
    <string name="name">Denumire</string>
    <string name="event_name">Denumire Eveniment</string>
    <string name="event_date">Data eveniment</string>
    <string name="see_details">Vezi detalii</string>
    <string name="modify_profile">Modifică Profilul</string>
    <string name="logout">Deconectare</string>
    <string name="add_event">Adaugă eveniment</string>
    <string name="next_events">Evenimentele viitoare</string>
    <string name="event_image">Event representative image</string>
    <string name="add_image">Adaugă fotografie</string>
    <string name="default_date">--/--/----</string>
    <string name="choose_date">Alege data</string>
    <string name="describe_event">Descrie evenimentul în câteva cuvinte</string>
    <string name="pick_location">Alege locația</string>
    <string name="location">Locația</string>
    <string name="create_event">Crează eveniment</string>
    <string name="hello_blank_fragment">Hello Blank Fragment</string>
    <string name="more">Mai multe</string>
    <string name="stats">Statistici</string>
    <string name="role">Rol</string>
    <string name="user_name">User Name</string>
    <string name="mycar">Mașina mea</string>
    <string name="error">Eroare</string>
    <string name="cars">Mașini</string>
    <string name="car_list">Listă mașini</string>
    <string name="addv2">Adaugă</string>
    <string name="modify">Modifică</string>
    <string name="cars_existent">Masinile existente</string>
    <string name="users_existent">Utilizatori existenti</string>
    <string name="endDate">Dată final</string>
    <string name="startDate">Dată început</string>
    <string name="details">Detalii</string>
    <string name="add_car">Adaugă mașina</string>
    <string name="add_images">Adaugă fotografii</string>
    <string name="car_brand">Marcă autovehicul</string>
    <string name="choose_car_brand">Alege marca auto</string>
    <string name="choose_car_model">Alege model auto</string>
    <string name="car_model">Model autovehicul</string>
    <string name="car_registration_number">Număr de înmatriculare</string>
    <string name="car_registration_example">ex: B123ABC</string>
    <string name="accepted_mods">Tipul de modificări admise</string>
    <string name="exhaust">Evacuare</string>
    <string name="coilovers">Suspensii/Arcuri</string>
    <string name="bodykit">Modificări ale caroseriei</string>
    <string name="rims">Jante</string>
    <string name="performance_mods">Modificări ale motorului</string>
    <string name="event_competitions">Concursuri în cadrul evenimentului</string>
    <string name="loudest_pipe">Loudest pipe</string>
    <string name="limbo">Limbo</string>
    <string name="best_car_of_the_show">Best Car of The Show</string>
    <string name="noLikes">0</string>
    <string name="event_location">Locație eveniment</string>
    <string name="car_model_example">ex: A45 AMG</string>
    <string name="car_brand_example">ex: Mercedes-Benz</string>
    <string name="location_example">ex: Snagov Plaza</string>
    <string name="car_mods_applied">Modificări aduse mașinii</string>
    <string name="my_garage">Garajul meu</string>
    <string name="search_location">Caută locația</string>
    <string name="event_type">Tipul de eveniment</string>
    <string name="choose_event_type">Alege tipul evenimentului</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.

    </string>
    <string name="delete">Șterge</string>
    <string name="like_event">Apreciază event</string>
    <string name="add_car_to_event">Înscrie mașina</string>
    <string name="my_events">Evenimentele mele</string>
    <string name="registered_cars">Mașini înscrise</string>
    <string name="no_likes">Număr aprecieri</string>
    <string name="no_accepted_cars">Number mașini acceptate</string>
    <string name="accept">Acceptă</string>
    <string name="deny">Refuză</string>
    <string name="waiting">In asteptare</string>
    <string name="accepted">Acceptati</string>
    <string name="denied">Refuzati</string>
    <string name="accepted_cars">Masini Acceptate</string>
    <string name="denied_cars">Masini Respinse</string>
    <string name="closeby_events">Evenimente in Apropiere</string>
    <string name="accepted_denied_cars">Masini acceptate/refuzate</string>
    <string name="mods_type">Tipuri de modificari</string>
    <string name="event_description">Descriere</string>
    <string name="accepted_refused">Acceptat/Refuzat</string>
</resources>