<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/yellow"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/revvedup_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="@color/midnight_blue"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/lname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/midnight_blue_border"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/midnight_blue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/midnight_blue_border"
            android:hint="@string/first_name"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/midnight_blue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/midnight_blue_border"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/midnight_blue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/midnight_blue_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/midnight_blue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/midnight_blue_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/midnight_blue"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/cpassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@drawable/midnight_blue_border"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/midnight_blue"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/autoComplete_usertype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/choose_role"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/register_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/midnight_blue"
            android:text="@string/register_btn"
            android:textSize="18sp"
            app:cornerRadius="30dp"
            tools:ignore="DuplicatedpeakableTextCheck" />

        <TextView
            android:id="@+id/loginRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            android:text="@string/already_an_user_login"
            android:textColor="@color/midnight_blue"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>