<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="5dp"
                android:text="@string/car_registration_number"
                android:textSize="24sp" />

            <com.denzcoskun.imageslider.ImageSlider
                android:id="@+id/carImageSlider"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:iss_auto_cycle="true"
                app:iss_delay="1000"
                app:iss_period="1000" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/car_brand"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/car_model"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bullet"
            android:padding="10dp"
            android:text="@string/event_type"
            android:textSize="14sp" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/golden_yellow"
            android:text="@string/back"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

    </LinearLayout>


</ScrollView>