<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/yellow"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/revvedup_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textColor="@color/midnight_blue"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15sp"
                android:autofillHints=""
                android:background="@drawable/midnight_blue_border"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/midnight_blue"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/midnight_blue_border"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/midnight_blue"
                android:textSize="15sp" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:text="@string/login_btn"
                android:textSize="18sp"
                android:backgroundTint="@color/midnight_blue"
                app:cornerRadius = "30dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/registerRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/register_now"
                android:textColor="@color/midnight_blue"
                android:textSize="16sp" />

        </LinearLayout>

</LinearLayout>