<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eventImageView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginHorizontal="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/empty_image" />


        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:gravity="bottom"
            android:text="@string/event_name"
            android:textSize="26sp" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:text="@string/event_date"
            android:textSize="22sp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:id="@+id/eventType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/bullet"
            android:padding="10dp"
            android:text="@string/event_type"
            android:textSize="16sp"
            android:layout_marginVertical="5dp"/>

        <TextView
            android:id="@+id/eventDetails"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:text="@string/lorem_ipsum"
            android:textSize="18sp"
            android:layout_marginVertical="5dp"/>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/location_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/golden_yellow"
            android:text="@string/back"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

    </LinearLayout>

</ScrollView>