<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/add_event"
            android:textColor="@color/midnight_blue"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="25dp">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/event_image"
                android:scaleType="fitCenter"
                android:src="@drawable/empty_image" />

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_image"
            app:cornerRadius="30dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/eventname"
                android:layout_width="275dp"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/midnight_blue_border"
                android:hint="@string/event_name"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/midnight_blue"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="Detalii"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/eventdetails"
                android:layout_width="275dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="@drawable/midnight_blue_border"
                android:hint="@string/describe_event"
                android:inputType="textMultiLine"
                android:lines="5"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:textColor="@color/midnight_blue"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="Data început"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eventStartDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/default_date"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/pickStartDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"
                    app:cornerRadius="30dp" />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:text="Data final"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eventEndDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/default_date"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/pickEndDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_date"
                    app:cornerRadius="30dp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/location"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/picklocation"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/pick_location"
                app:cornerRadius="30dp" />

        </LinearLayout>

        <Button
            android:id="@+id/addevent"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/golden_yellow"
            android:text="@string/create_event"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/golden_yellow"
            android:text="@string/back"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

    </LinearLayout>


</ScrollView>